@@ -1,3 +1,8 @@
+2004-12-19  JosÃ© E. Marchesi  <jemarch@gnu.org>
+
+	* src/Makefile.am ($(srcdir)/gv_intern_res_unix.dat): Fix
+	GV.gsCmdConvPDF in order to work.
+
 2004-12-06  JosÃ© E. Marchesi  <jemarch@gnu.org>
 
 	* src/main.c (main): Process GNU arguments after X initialization
